--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 <img src="donation2.png">Donation (Patreon)</div>
 <div class="card" onclick="window.open('mailto:jacehawkins951@gmail.com', '_self')">
 <img src="gmail.png">Request A Song</div>
+     <div class="card" onclick="window.open('https://musicunblockertest54.vercel.app/', '_self')">
+<img src="testsite.png">Random Songs/Test Site</div>
+     <div class="card" onclick="window.open('https://funkandphonk.vercel.app/', '_self')">
+<img src="phoneksnfunks.png">Phonks (Soon)</div>
 </div>
 
 </body>
