--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="search">
   <input tpye="search" autocomplete="off" 
-  id="search" class="search-games" placeholder="Jaces Music Unblocker | search phonks.." onkeypress="searchgames()">
+  id="search" class="search-games" placeholder="Jaces Music Unblocker | search sites.." onkeypress="searchgames()">
 </div>
 
 
@@ -61,9 +61,9 @@
 <img src="donation2.png">Donation (Patreon)</div>
 <div class="card" onclick="window.open('mailto:jacehawkins951@gmail.com', '_self')">
 <img src="gmail.png">Request A Song</div>
-     <div class="card" onclick="window.open('https://musicunblockertest54.vercel.app/', '_self')">
+<div class="card" onclick="window.open('https://musicunblockertest54.vercel.app/', '_self')">
 <img src="testsite.png">Random Songs/Test Site</div>
-     <div class="card" onclick="window.open('https://funkandphonk.vercel.app/', '_self')">
+<div class="card" onclick="window.open('https://funkandphonk.vercel.app/', '_self')">
 <img src="phoneksnfunks.png">Phonks (Soon)</div>
 </div>
 
