--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
   <div class="topnav">
-    <a href="home.html">
-    <button title="Home" id="Home" class="divbutton"> Home </button> 
+    <a href="index.html">
+    <button title="Main Page" id="Main Page" class="divbutton"> Home </button> 
   </a> 
 
-    <a href="Request Songs Only.html">
+    <a href="soon.html">
     <button title="Requested" id="Requested" class="divbutton"> Requested </button> 
   </a> 
   </div>
@@ -65,6 +65,8 @@
 <img src="testsite.png">Random Songs/Test Site</div>
 <div class="card" onclick="window.open('https://funkandphonk.vercel.app/', '_self')">
 <img src="phoneksnfunks.png">Phonks (Soon)</div>
+<div class="card" onclick="window.open('https://rap-music-only-unblocked.vercel.app/', '_self')">
+<img src="rapsnstuff.png">Rap Music (Soon)</div>
 </div>
 
 </body>
