--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="card" onclick="window.open('https://musicunblockertest54.vercel.app/', '_self')">
 <img src="testsite.png">Random Songs/Test Site</div>
 <div class="card" onclick="window.open('https://funkandphonk.vercel.app/', '_self')">
-<img src="phoneksnfunks.png">Phonks (Soon)</div>
+<img src="phoneksnfunks.png">Phonks (Release)</div>
 <div class="card" onclick="window.open('https://rap-music-only-unblocked.vercel.app/', '_self')">
 <img src="rapsnstuff.png">Rap Music (Soon)</div>
 </div>
