--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="card" onclick="window.open('mailto:jacehawkins951@gmail.com', '_self')">
 <img src="gmail.png">Request A Song</div>
 <div class="card" onclick="window.open('https://musicunblockertest54.vercel.app/', '_self')">
-<img src="testsite.png">Random Songs/Test Site</div>
+<img src="testsite.png">Beta Site (Update)</div>
 <div class="card" onclick="window.open('https://funkandphonk.vercel.app/', '_self')">
 <img src="phoneksnfunks.png">Phonks (New)</div>
 <div class="card" onclick="window.open('https://rap-music-only-unblocked.vercel.app/', '_self')">
